# openfhe-development

./: CMakeLists.txt  OpenFHEConfig.cmake.in  README.md
.github/workflows/: emscripten.yml
configure/: config_core.in
docs/sphinx_rsts/intro/installation/: cmake_in_openfhe.rst
docs/static_docs/: Best_Performance.md
src/binfhe/include/: binfhe-base-scheme.h  binfhecontext.h  rgsw-cryptoparameters.h
src/binfhe/lib/: binfhe-base-scheme.cpp  binfhecontext.cpp  rgsw-cryptoparameters.cpp
src/core/include/lattice/: field2n-impl.h  field2n.h  stdlatticeparms.h
src/core/include/lattice/hal/: dcrtpoly-interface.h
src/core/include/math/hal/bigintdyn/: ubintdyn.h
src/core/include/math/hal/bigintfxd/: mubintvecfxd.h  ubintfxd.h
src/core/include/math/hal/bigintntl/: ubintntl.h
src/core/include/utils/: memory.h
src/core/lib/lattice/: stdlatticeparms.cpp
src/core/lib/math/hal/bigintdyn/: ubintdyn.cpp
src/core/lib/math/hal/bigintfxd/: mubintvecfxd.cpp  ubintfxd.cpp
src/core/lib/utils/: memory.cpp
src/pke/: CMakeLists.txt
src/pke/examples/: CKKS_BOOTSTRAPPING.md  PACO_BOOTSTRAPPING.md  PACO_KEY_LIFECYCLE.md  README.md  ckks-bootstrap-keys-serial.cpp  ckks-release-memory.cpp  paco-ckks-bootstrapping.cpp  paco-production-audit.cpp  paco-security-profile.cpp
src/pke/glr-production-adapter/: CMakeLists.txt  IMPLEMENTATION_STATUS.md
src/pke/glr-production-adapter/include/openfhe/pke/: gl-int-production-glr-bridge.h  glr-production-adapter.h
src/pke/glr-production-adapter/src/: gl-int-production-glr-bridge.cpp  glr-production-adapter.cpp
src/pke/glr-production-adapter/tests/: gl-int-production-glr-bridge-link-test.cpp  glr-production-adapter-h64-all-y-compile-test.cpp  glr-production-adapter-h64-all-y-metadata-test.cpp  glr-production-adapter-h64-hidden-stream-compile-test.cpp  glr-production-adapter-h64-hidden-stream-metadata-test.cpp  glr-production-adapter-metadata-test.cpp  glr-production-adapter-resumable-pack-test.cpp
src/pke/include/: ciphertext.h  cryptocontext-ser.h  cryptocontext.h  cryptocontextfactory.h  cryptoobject.h  metadata.h  openfhe.h
src/pke/include/encoding/: ckkspackedencoding.h  coefpackedencoding.h  encodingparams.h  packedencoding.h  plaintext.h  stringencoding.h
src/pke/include/key/: evalkeyrelin.h  privatekey.h  publickey.h
src/pke/include/keyswitch/: keyswitch-base.h  keyswitch-bv.h  keyswitch-hybrid.h  keyswitch-rns.h
src/pke/include/scheme/bfvrns/: bfvrns-advancedshe.h  bfvrns-cryptoparameters.h  bfvrns-fhe.h  bfvrns-leveledshe.h  bfvrns-multiparty.h  bfvrns-parametergeneration.h  bfvrns-pke.h  bfvrns-pre.h  bfvrns-scheme.h
src/pke/include/scheme/bgvrns/: bgvrns-advancedshe.h  bgvrns-cryptoparameters.h  bgvrns-fhe.h  bgvrns-leveledshe.h  bgvrns-multiparty.h  bgvrns-parametergeneration.h  bgvrns-pke.h  bgvrns-pre.h  bgvrns-scheme.h
src/pke/include/scheme/ckksrns/: ckksrns-advancedshe.h  ckksrns-cryptoparameters.h  ckksrns-fhe.h  ckksrns-leveledshe.h  ckksrns-multiparty.h  ckksrns-paco-bsgs.h  ckksrns-paco-numerics.h  ckksrns-paco-serialization.h  ckksrns-paco.h  ckksrns-parametergeneration.h  ckksrns-pke.h  ckksrns-pre.h  ckksrns-scheme.h  ckksrns-schemeswitching.h  gen-cryptocontext-ckksrns-internal.h
src/pke/include/scheme/gl/: gl-int-production-matmul.h  gl-int-production-rlwe.h  gl-int-production-switch.h  gl-int-production.h  gl-int.h  gl-schemelet.h  gl-ship.h  gl-srdl-paco.h
src/pke/include/schemebase/: base-advancedshe.h  base-cryptoparameters.h  base-fhe.h  base-multiparty.h  base-pke.h  base-pre.h  base-scheme.h  rlwe-cryptoparameters.h
src/pke/include/schemerns/: rns-advancedshe.h  rns-cryptoparameters.h  rns-fhe.h  rns-leveledshe.h  rns-multiparty.h  rns-parametergeneration.h  rns-pke.h  rns-pre.h  rns-scheme.h
src/pke/lib/: cryptocontext.cpp  cryptocontextfactory.cpp  cryptoobject-impl.cpp
src/pke/lib/encoding/: ckkspackedencoding.cpp  coefpackedencoding.cpp  packedencoding.cpp  stringencoding.cpp
src/pke/lib/keyswitch/: keyswitch-hybrid.cpp
src/pke/lib/scheme/: gen-cryptocontext-params-validation.cpp
src/pke/lib/scheme/ckksrns/: ckksrns-cryptoparameters.cpp  ckksrns-fhe.cpp  ckksrns-leveledshe.cpp  ckksrns-paco-numerics.cpp  ckksrns-paco-serialization.cpp  ckksrns-paco.cpp  ckksrns-parametergeneration.cpp  ckksrns-schemeswitching.cpp  ckksrns-utils.cpp
src/pke/lib/scheme/gl/: gl-int-production-matmul.cpp  gl-int-production-rlwe.cpp  gl-int-production-switch.cpp  gl-int-production.cpp  gl-int.cpp  gl-schemelet.cpp  gl-ship.cpp  gl-srdl-paco.cpp
src/pke/lib/schemerns/: rns-cryptoparameters.cpp  rns-leveledshe.cpp
src/pke/unittest/: UnitTestMultiparty.cpp
src/pke/unittest/utckksrns/: UnitTestCKKSCacheClear.cpp  UnitTestCKKSrns.cpp  UnitTestCKKSrnsCompositeScalingBootstrap.cpp  UnitTestCKKSrnsCompositeScalingVsFlexible.cpp  UnitTestCKKSrnsSerialize.cpp  UnitTestPaCoBootstrap.cpp  UnitTestPaCoKeySerialization.cpp  UnitTestPaCoNumerics.cpp
src/pke/unittest/utgl/: UnitTestGLInt.cpp  UnitTestGLIntProduction.cpp  UnitTestGLIntProductionMatMul.cpp  UnitTestGLIntProductionRLWE.cpp  UnitTestGLIntProductionSwitch.cpp  UnitTestGLOps.cpp  UnitTestGLPipeline.cpp  UnitTestGLSRDLPaco.cpp  UnitTestGLSchemelet.cpp  UnitTestGLShip.cpp
